--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,5 +1,5 @@
 .about_block{
-  background: url('../img/bg_1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/bg_1.jpg') center no-repeat;
   background-size: cover;
   padding-top: 80px;
   margin-bottom: 20px;
