--- a/sass/_advantages.scss
+++ b/sass/_advantages.scss
@@ -136,31 +136,31 @@
   }
 }
 .advantages_item__1{
-  background: url('/img/adv/1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/1.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__2{
-  background: url('/img/adv/2.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/2.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__3{
-  background: url('/img/adv/3.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/3.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__4{
-  background: url('/img/adv/4.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/4.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__5{
-  background: url('/img/adv/5.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/5.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__6{
-  background: url('/img/adv/6.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/6.jpg') center no-repeat;
   background-size: cover;
 }
 .advantages_item__7{
-  background: url('/img/adv/7.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/adv/7.jpg') center no-repeat;
   background-size: cover;
 }
 
