--- a/sass/_building.scss
+++ b/sass/_building.scss
@@ -163,27 +163,27 @@
 
 
 .stroy_item__1 {
-    background: url(../img/hod/1.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/1.jpg") center no-repeat;
     background-size: cover;
 }
 .stroy_item__2 {
-    background: url(../img/hod/2.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/2.jpg") center no-repeat;
     background-size: cover;
 }
 .stroy_item__3 {
-    background: url(../img/hod/3.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/3.jpg") center no-repeat;
     background-size: cover;
 }
 .stroy_item__4 {
-    background: url(../img/hod/4.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/4.jpg") center no-repeat;
     background-size: cover;
 }
 .stroy_item__5 {
-    background: url(../img/hod/5.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/5.jpg") center no-repeat;
     background-size: cover;
 }
 .stroy_item__6 {
-    background: url(../img/hod/6.jpg) center no-repeat;
+    background: url("/wp-content/themes/happy-house/assets/img/hod/6.jpg") center no-repeat;
     background-size: cover;
 }
 .gold__timeline {
