--- a/sass/_infra.scss
+++ b/sass/_infra.scss
@@ -61,7 +61,7 @@
   }
 }
 .infra__item__1{
-  background: url('/img/infra/1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/1.jpg') center no-repeat;
   background-size: cover;
   margin-top: 0;
   .section__name{
@@ -69,30 +69,30 @@
   }
 }
 .infra__item__2{
-  background: url('/img/infra/2.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/2.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__3{
-  background: url('/img/infra/3.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/3.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__4{
-  background: url('/img/infra/4.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/4.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__5{
-  background: url('/img/infra/5.jpg') center top no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/5.jpg') center top no-repeat;
   background-size: cover;
   .section__name{
     top:200px;
   }
 }
 .infra__item__6{
-  background: url('/img/infra/6.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/6.jpg') center no-repeat;
   background-size: cover;
 }
 .infra__item__7{
-  background: url('/img/infra/7.jpg') center bottom no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/infra/7.jpg') center bottom no-repeat;
   background-size: cover;
   .section__name{
     top:120px;
