--- a/sass/_location.scss
+++ b/sass/_location.scss
@@ -9,11 +9,11 @@
 }
 
 .location_item_1{
-  background: url('/img/location/1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/location/1.jpg') center no-repeat;
   background-size: cover;
 }
 .location_item_2{
-  background: url('/img/location/2.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/location/2.jpg') center no-repeat;
   background-size: cover;
 }
 .location_box{
