--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -20,20 +20,20 @@
   }
 }
 .news_item__1{
-  background: url(/img/adv_bg.jpg) center no-repeat;
+  background: url("/wp-content/themes/happy-house/assets/img/adv_bg.jpg") center no-repeat;
   background-size: cover;
 }
 
 .news_item__2{
-  background: url(/img/adv_bg.jpg) center no-repeat;
+  background: url("/wp-content/themes/happy-house/assets/img/adv_bg.jpg") center no-repeat;
   background-size: cover;
 }
 .news_item__3{
-  background: url(/img/adv_bg.jpg) center no-repeat;
+  background: url("/wp-content/themes/happy-house/assets/img/adv_bg.jpg") center no-repeat;
   background-size: cover;
 }
 .news_item__4{
-  background: url(/img/adv_bg.jpg) center no-repeat;
+  background: url("/wp-content/themes/happy-house/assets/img/adv_bg.jpg") center no-repeat;
   background-size: cover;
 }
 .pagination {
