--- a/sass/_special.scss
+++ b/sass/_special.scss
@@ -23,19 +23,19 @@
 
 }
 .special_item__1{
-  background: url('/img/special/1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/special/1.jpg') center no-repeat;
   background-size: cover;
 }
 .special_item__2{
-  background: url('/img/special/2.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/special/2.jpg') center no-repeat;
   background-size: cover;
 }
 .special_item__3{
-  background: url('/img/special/3.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/special/3.jpg') center no-repeat;
   background-size: cover;
 }
 .special_item__4{
-  background: url('/img/special/4.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/special/4.jpg') center no-repeat;
   background-size: cover;
 }
 .special_box {
