--- a/sass/_values.scss
+++ b/sass/_values.scss
@@ -59,18 +59,18 @@
 }
 
 .values_item__1{
-  background: url('/img/values/1.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/values/1.jpg') center no-repeat;
   background-size: cover;
 }
 .values_item__2{
-  background: url('/img/values/2.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/values/2.jpg') center no-repeat;
   background-size: cover;
   .values__name{
     top: 10%;
   }
 }
 .values_item__3{
-  background: url('/img/values/3.jpg') center no-repeat;
+  background: url('/wp-content/themes/happy-house/assets/img/values/3.jpg') center no-repeat;
   background-size: cover;
 }
 @media only screen and (max-width:768px) {
