--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -9,7 +9,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('/img/menu_bg.jpg');
+background: url("/wp-content/themes/happy-house/assets/img/menu_bg.jpg");
 background-size: cover;
 display: none;
 opacity: 0;
