--- a/css/style_pdf.css
+++ b/css/style_pdf.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
-    /* font-family: "GothaProLig"; */
+    /*font-family: sans-serif;*/
+    font-family: "oksanasans";
 }
 body{
   /* padding-top: 50mm; */
+    font-family: "oksanasans";
 }
 .red{
     color:#ed1c24;
@@ -57,6 +58,7 @@ body{
 }
 .cell_img_inner{
   width: 160mm;
+  /* height: 80mm; */
   float: left;
   padding: 20px 50px 10px;
   text-align: center;
@@ -65,6 +67,7 @@ body{
   position: relative;
 }
 .cell_img_inner img{
+  /* width: 80%; */
   height: 100%;
   display: block;
   margin: 0 auto;
